--- a/package.json
+++ b/package.json
@@ -13,11 +13,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "start-dev": "nodemon server.js",
+    "dev": "concurrently \"nodemon server.js\" \"cd client && npm start\" ",
     "heroku-postbuild": "cd client && npm i && npm run build"
-
-    
-    
   },
   "keywords": [],
   "author": "",
