--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "mongoose": "^5.12.12",
     "nodemon": "^2.0.7"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "concurrently": "^6.2.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
